1.代码优化。